# Nanocolor

./: CMakeLists.txt  Nanocolor.cpp  Nanocolor.h  Nanocolor.md  NanocolorUtils.h  README.md  color.md  nanocolor.c  nanocolor.cpp  nanocolor.h  nanocolorProcessing.h  nanocolorUtils.c  nanocolorUtils.cpp  nanocolorUtils.h  nanocolorchips-main.c  nanocolorchips.c  nanocolorchips.h
cmake/: nanocolorConfig.cmake.in
py/: README.md  colorchips.py  nanocolor.py  usd-colorchecker.py
swift/: Nanocolor+CoreGraphics.swift  README.md  colorschips.swift  nanocolor.swift
zig/: build.zig  colorchips.zig  nanocolor.zig
